--- a/.github/workflows/nfr.yml
+++ b/.github/workflows/nfr.yml
@@ -175,8 +175,8 @@ jobs:
         working-directory: ./tests
         if: always()
         run: |
-          bash scripts/cleanup-vm.sh true
-          bash scripts/cleanup-router.sh true
+          # bash scripts/cleanup-vm.sh true
+          # bash scripts/cleanup-router.sh true
           make delete-gke-cluster
           rm -rf scripts/vars.env
 
