Fix helm flag verification and add tests for Plus configuration

--- a/charts/nginx-gateway-fabric/templates/deployment.yaml
+++ b/charts/nginx-gateway-fabric/templates/deployment.yaml
@@ -72,7 +72,7 @@ spec:
           {{- if .Values.nginx.usage.clientSSLSecretName }}
         - --usage-report-client-ssl-secret={{ .Values.nginx.usage.clientSSLSecretName }}
           {{- end }}
-          {{- if .Values.nginx.usage.enforceInitialReport }}
+          {{- if hasKey .Values.nginx.usage "enforceInitialReport" }}
         - --usage-report-enforce-initial-report={{ .Values.nginx.usage.enforceInitialReport }}
           {{- end }}
         {{- end }}
