Update ipv6 test script to run on a local IPv6 kind cluster

--- a/tests/manifests/ipv6-test-app.yaml
+++ b/tests/manifests/ipv6-test-app.yaml
@@ -47,8 +47,9 @@ metadata:
   namespace: default
 spec:
   parentRefs:
-  - name: nginx-gateway
-    namespace: nginx-gateway
+  - name: gateway
+    sectionName: http
+    namespace: default
   hostnames:
   - "ipv6-test.example.com"
   rules:
