--- a/tests/ipv6/manifests/ipv6-test-app.yaml
+++ b/tests/ipv6/manifests/ipv6-test-app.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:alpine
+        image: nginxdemos/nginx-hello:plain-text
         ports:
         - containerPort: 80
         resources:
