--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -270,16 +270,18 @@ jobs:
         with:
           go-version: stable
 
-      - name: Generate Module Dependencies Info
-        id: go_deps
+      - name: Fetch Cached Artifacts
+        uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
+        with:
+          path: ${{ github.workspace }}/dist
+          key: nginx-gateway-fabric-${{ github.run_id }}-${{ github.run_number }}
+
+      - name: List Dependencies in Go Binary
+        id: godeps
         run: |
-          echo "Generating module dependencies info..."
-          cd cmd/gateway
-          goversionm=goversionm_${{ github.run_id }}_${{ github.run_number }}_${{ matrix.gateway.os }}_${{ matrix.gateway.arch }}.txt
-          go list -m all > ../../goversionm_${{ github.run_id }}_${{ github.run_number }}_${{ matrix.gateway.os }}_${{ matrix.gateway.arch }}.txt
-          echo "Module dependencies saved to goversionm_${{ github.run_id }}_${{ github.run_number }}_${{ matrix.gateway.os }}_${{ matrix.gateway.arch }}.txt"
-          cd ../..
-          echo "goversionm=goversionm_${{ github.run_id }}_${{ github.run_number }}_${{ matrix.gateway.os }}_${{ matrix.gateway.arch }}.txt" >> $GITHUB_OUTPUT
+          go version -m dist/gateway_${{ matrix.gateway.os }}_${{ matrix.gateway.arch }}*/gateway > goversionm_${{ github.run_id }}_${{ github.run_number }}_${{ matrix.gateway.os }}_${{ matrix.gateway.arch }}.txt
+          echo "goversionm=$(find -type f -name "goversionm*.txt" | head -n 1)" >> $GITHUB_OUTPUT
+          cat $GITHUB_OUTPUT
 
       - name: Generate Assertion Document
         id: assertiondoc
@@ -297,7 +299,7 @@ jobs:
           artifactory-api-token: ${{ secrets.ARTIFACTORY_TOKEN }}
           artifactory-url: ${{ secrets.ARTIFACTORY_URL }}
           artifactory-repo: 'f5-nginx-go-local-approved-dependency'
-          build-content-path: ${{ steps.go_deps.outputs.goversionm }}
+          build-content-path: ${{ steps.godeps.outputs.goversionm }}
           assertion-doc-file: assertion_${{ github.event.repository.name }}_${{ github.sha }}_${{ github.run_id }}_${{ github.run_number }}_${{ matrix.gateway.os }}_${{ matrix.gateway.arch }}.json
 
       - name: Sign and Store Assertion Document
