--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -11,10 +11,10 @@ builds:
       - arm64
     flags:
       - -trimpath
-    gcflags:
-      - all=-trimpath={{.Env.GOPATH}}
-    asmflags:
-      - all=-trimpath={{.Env.GOPATH}}
+    # gcflags:
+    #   - all=-trimpath={{.Env.GOPATH}}
+    # asmflags:
+    #   - all=-trimpath={{.Env.GOPATH}}
     ldflags:
       - -s -w
       - -X main.version={{.Version}}
