--- a/operators/config/prometheus/monitor.yaml
+++ b/operators/config/prometheus/monitor.yaml
@@ -4,7 +4,7 @@ kind: ServiceMonitor
 metadata:
   labels:
     control-plane: controller-manager
-    app.kubernetes.io/name: operators
+    app.kubernetes.io/name: nginx-gateway-fabric
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager-metrics-monitor
   namespace: system
@@ -24,4 +24,4 @@ spec:
   selector:
     matchLabels:
       control-plane: controller-manager
-      app.kubernetes.io/name: operators
+      app.kubernetes.io/name: nginx-gateway-fabric
