--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -279,7 +279,7 @@ jobs:
 
       - name: Generate Assertion Document
         id: assertiondoc
-        uses: nginxinc/compliance-rules/.github/actions/assertion@test/debug-level
+        uses: nginxinc/compliance-rules/.github/actions/assertion@main
         with:
           artifact-name: ${{ github.event.repository.name }}_${{ github.sha }}_${{ github.run_number }}_${{ matrix.gateway.os }}_${{ matrix.gateway.arch }}
           artifact-digest: ${{ matrix.gateway.digest }}
@@ -299,7 +299,7 @@ jobs:
 
       - name: Sign and Store Assertion Document
         id: sign
-        uses: nginxinc/compliance-rules/.github/actions/sign@test/debug-level
+        uses: nginxinc/compliance-rules/.github/actions/sign@main
         with:
           assertion-doc: ${{ steps.assertiondoc.outputs.assertion-document-path }}
 
