Add production-release as an input for functional tests

--- a/.github/workflows/functional.yml
+++ b/.github/workflows/functional.yml
@@ -13,6 +13,10 @@ on:
       k8s-version:
         required: true
         type: string
+      production-release:
+        required: false
+        type: boolean
+        default: false
 
 defaults:
   run:
